# py-obs

./: .gitignore  Makefile  README.rst  configure-mini-obs.sh  pyproject.toml  start-mini-obs.sh
.github/workflows/: ci.yml  release.yml
src/py_obs/: build_result.py  configuration.py  history.py  maintenance.py  osc.py  person.py  project.py  request.py  service.py  status.py  token.py  xml_factory.py
tests/: conftest.py  test_build_result.py  test_configuration.py  test_file.py  test_history.py  test_maintenance.py  test_osc.py  test_package.py  test_package_info.py  test_project.py  test_public.py  test_request.py  test_service.py  test_status.py  test_token.py  test_xml_factory.py
tests/cassettes/test_build_result/: test_pkg_build_result.yaml  test_pkg_lastbuild_result.yaml
tests/cassettes/test_maintenance/: test_double_mbranch.yaml  test_fetch_maintained_code_streams_of_existing_pkg.yaml  test_maintained_code_streams_of_invalid_pkg.yaml  test_mbranch_unknown_package.yaml  test_ordinary_mbranch.yaml
tests/cassettes/test_osc/: test_backoff.yaml
tests/cassettes/test_package_info/: test_errors_out_on_non_existing_package.yaml  test_errors_out_on_non_spec_packages.yaml  test_mariadb_from_SLES.yaml  test_nginx_from_factory.yaml
tests/cassettes/test_project/: test_package_list_excludes_multibuild.yaml
